# advent-of-code

./: README.md
2016/haskell/: .dir-locals.el  README.md  aoc2016.cabal  stack.yaml
2016/haskell/src/: Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Main.hs
2017/haskell/: .dir-locals.el  README.md  aoc2017.cabal
2017/haskell/src/: Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs
2017/rust/: Cargo.toml
2017/rust/src/: common.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  main.rs
2018/haskell/: .dir-locals.el  README.md  aoc2018.cabal  run_aoc  stack.yaml
2018/haskell/src/: Assembly.hs  Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day20Main.hs  Day22.hs  Day25.hs  Main.hs  PathFinding.hs
2019/haskell/: .dir-locals.el  .gitignore  package.yaml  run  stack.yaml
2019/haskell/lib/: AOC.hs
2019/haskell/src/: AnimationTest.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  PathFindingTest.hs
2020/haskell/: aoc.cabal  package.yaml  stack.yaml
2020/haskell/lib/: AOC.hs
2020/haskell/src/: AnimationTest.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Template.hs
2020/nim/: Makefile
2020/nim/src/: day01.nim
2020/pony/: .gitignore  Makefile  corral.json  lock.json
2020/pony/src/: day01.pony  day02.pony  day03.pony  main.pony
2020/rust/: Cargo.toml
2020/rust/src/: day01.rs
2021/haskell/: aoc.cabal  package.yaml  stack.yaml
2021/haskell/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18-2.hs  Day18-3.hs  Day18.hs  PathFindingTest.hs  Template.hs
2022/brainfuck/: 01-A.bf  01-A.bs  01-B.bf  01-B.bs  02-A.bf  02-A.bs  02-B.bf  02-B.bs  04-A.bf  04-A.bs  04-B.bf  04-B.bs  06-A.bf  06-B.bf  06-B.bs  09-A.bf  09-A.bs  09-B.bf  09-B.bs  09-common.bs  10-A.bf  10-A.bs  10-B.bf  10-B.bs  25-A.bf  25-A.bs  Makefile
2022/cpp/: CMakeLists.txt
2022/cpp/lib/: aoc.hh
2022/cpp/lib/aoc/: input.cc  input.hh
2022/cpp/src/: day01.cc
2022/haskell/: .gitignore  .stylish-haskell.yaml  aoc.cabal  package.yaml  stack.yaml
2022/haskell/lib/: AOC.hs
2022/haskell/src/: AnimationTest.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  PathFindingTest.hs  (+1 more)
2023/brainfuck/: 01-A.bf  01-A.bs  02-A.bf  02-A.bs  04-A.bf  04-A.bs  backpiler.bf  backpiler.bs  backpiler.mbs  backtest  compare.bf  compare2.bf  input.test  log  test  transpiler.bf  transpiler.bs
2023/haskell/: aoc.cabal  package.yaml
2024/brainfuck/: 02-A.bf  02-A.bs  03-A.bf  03-A.bs  03-B.bf  03-B.bs  07-A.bf  07-A.bs  14-A.bf  14-A.bs
2024/haskell/: .dir-locals.el  aoc.cabal  package.yaml  stack.yaml
2025/brainfuck/: 01-A.bf  01-A.bs  07.bf  run.sh
2025/haskell/: .gitignore  .hlint.yaml  .stylish-haskell.yaml  aoc.cabal  package.yaml  stack.yaml
2025/rust/: Cargo.toml
(+140 files in other folders)
