name:                aoc2016
version:             0.1.0.0
homepage:            https://github.com/githubuser/haskell#readme
license:             OtherLicense
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2016
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -Werror
  default-language:    Haskell2010
  other-modules:       Common,Day01,Day02,Day03
  build-depends:       base >= 4.7 && < 5,
                       filepath,
                       split
