name:                aoc2017
version:             0.1.0.0
homepage:            https://github.com/githubuser/haskell#readme
license:             OtherLicense
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2017
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Common,Day01
  build-depends:       base >= 4.7 && < 5,
                       filepath
