name:                aoc2018
version:             0.1.0.0
homepage:            https://github.com/githubuser/haskell#readme
license:             OtherLicense
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2018
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N4 -O2 -Wall
                       -fno-warn-type-defaults
                       -fno-warn-unused-do-bind
                       -fno-warn-unused-top-binds
                       -fwarn-tabs
  default-language:    Haskell2010
  other-modules:       Common,
                       Day01,Day02,Day03,Day04,Day05,Day06,Day07,Day08,Day09,
                       Day10,Day11,Day12,Day13,Day14,Day15,Day16,Day17,Day18,
                       Day19,Day20,Day21,Day22,Day23,Day24,Day25
  build-depends:       base >= 4.7 && < 5,
                       filepath,parsec,split,MissingH,safe,array,containers,
                       tasty,tasty-hunit,tasty-quickcheck,pqueue,criterion,
                       parallel,vector,mtl,cryptohash-md5,bytestring,
                       base16-bytestring
